# Gen_AI

./: .gitignore  llmCall.py  pyproject.toml  sample.py
.github/workflows/: cicd.yml
